updated the app.py

--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -20,6 +20,8 @@
         <a href="{{ url_for('admin_income') }}" class="block text-gray-700 hover:text-blue-500">Income Overview</a>
         <a href="{{ url_for('add_product') }}" class="block text-gray-700 hover:text-blue-500">Add Product</a>
         <a href="{{ url_for('manage_batches') }}" class="block text-gray-700 hover:text-blue-500">Manage Batches</a>
+        <a href="{{ url_for('assign_task') }}" class="block text-gray-700 hover:text-blue-500">Assign Task</a>
+
         <!-- <a href="{{ url_for('manage_vaccinations') }}" class="block text-gray-700 hover:text-blue-500">Vaccination Schedule</a>
         <a href="{{ url_for('manage_production') }}" class="block text-gray-700 hover:text-blue-500">Log Egg & Meat Production</a>
         <a href="{{ url_for('manage_feed_resources') }}" class="block text-gray-700 hover:text-blue-500"> Feed & Resource Management</a> -->
