--- a/templates/manager-dashboard.html
+++ b/templates/manager-dashboard.html
@@ -19,6 +19,8 @@
         <a href="{{ url_for('poultry_stock') }}" class="block text-gray-700 hover:text-green-500">Poultry Stock</a>
         <!-- <a href="{{ url_for('add_product') }}" class="block text-gray-700 hover:text-green-500">Add Product</a> -->
         <a href="{{ url_for('feed_schedule_manager') }}" class="block text-gray-700 hover:text-green-500">Feed Schedule</a>
+        <a href="{{ url_for('assign_task') }}" class="block text-gray-700 hover:text-blue-500">Assign Task</a>
+
         <a href="{{ url_for('notifications') }}" class="block text-gray-700 hover:text-green-500">Notifications</a>
         <a href="{{ url_for('orders') }}" class="block text-gray-700 hover:text-green-500">Track Order</a>
         <a href="{{ url_for('admin_reported_issues') }}" class="block text-gray-700 hover:text-green-500">Reported Issues</a>
