Updated with the details of salary
Added new salary model, admin can add new salary and manage.

--- a/templates/admin_income.html
+++ b/templates/admin_income.html
@@ -17,6 +17,7 @@
         <a href="{{ url_for('admin_income') }}" class="block text-green-600 font-semibold">Income Overview</a>
         <a href="{{ url_for('record_sales') }}" class="block text-gray-700 hover:text-green-500">Record Sales</a>
         <a href="{{ url_for('manage_orders') }}" class="block text-gray-700 hover:text-green-500">Manage Orders</a>
+        <a href="{{ url_for('manage_salaries') }}" class="block text-gray-700 hover:text-green-500">Salary Details</a>
         <!-- Add more links as required -->
       </nav>
     </aside>
