--- a/templates/manager-dashboard.html
+++ b/templates/manager-dashboard.html
@@ -16,16 +16,10 @@
         <a href="{{ url_for('profile_management') }}" class="block text-gray-700 hover:text-green-500">
           Profile Management
         </a>
-        <a href="{{ url_for('poultry_stock') }}" class="block text-gray-700 hover:text-green-500">Poultry Stock</a>
-        <a href="{{ url_for('feed_schedule_manager') }}" class="block text-gray-700 hover:text-green-500">Feed Schedule</a>
+        <!-- <a href="{{ url_for('poultry_stock') }}" class="block text-gray-700 hover:text-green-500">Poultry Stock</a> -->
         <a href="{{ url_for('assign_task') }}" class="block text-gray-700 hover:text-blue-500">Assign Task</a>
 
         <a href="{{ url_for('notifications') }}" class="block text-gray-700 hover:text-green-500">Notifications</a>
-        <a href="{{ url_for('orders') }}" class="block text-gray-700 hover:text-green-500">Track Order</a>
-        <a href="{{ url_for('admin_reported_issues') }}" class="block text-gray-700 hover:text-green-500">Reported Issues</a>
-        <a href="{{ url_for('manage_orders') }}" class="block text-gray-700 hover:text-blue-500">
-          Manage Orders
-        </a>
         
         <!-- Add this line for logout -->
         <a href="{{ url_for('logout') }}" class="block text-red-600 hover:text-red-800">Logout</a>
