API Payment added

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -104,8 +104,7 @@
                 <label for="payment_method" class="block text-sm font-medium text-gray-700 mb-1">Payment Method</label>
                 <select id="payment_method" name="payment_method" class="w-full p-2 border rounded" required>
                   <option value="cash_on_delivery">Cash on Delivery</option>
-                  <option value="mobile_banking">Mobile Banking</option>
-                  <option value="bank_transfer">Bkash Payment</option>
+                  <option value="mobile_banking">International Transaction</option>
                 </select>
               </div>
               
