Updated with the graphic analysis
Updated the database with information, added new html file to view the graph analysis for the batch details, production details and feedlog details, fixed some errors in the redirection of the different pages.

--- a/templates/admin_manage_feed.html
+++ b/templates/admin_manage_feed.html
@@ -106,10 +106,12 @@
                 {% endfor %}
             </tbody>
         </table>
-        <!-- Back Button -->
-        <div class="flex space-x-4">
-            <a href="{{ url_for('admin_panel') if user.role == 'admin' else url_for('manager_dashboard') }}" class="bg-gray-500 text-white px-8 py-4 rounded hover:bg-gray-600">← Back</a>
-        </div>
+        {% if source == 'admin_panel' %}
+        <a href="{{ url_for('admin_panel') }}" class="bg-gray-500 text-white px-8 py-4 rounded hover:bg-gray-600">← Back</a>
+        {% else %}
+        <a href="{{ url_for('poultry_stock') }}" class="bg-gray-500 text-white px-8 py-4 rounded hover:bg-gray-600">← Back</a>
+        {% endif %}
+
 
 </body>
 </html>
