--- a/templates/admin_manage_production.html
+++ b/templates/admin_manage_production.html
@@ -104,8 +104,13 @@
             </tbody>
         </table>
         <!-- Back Button -->
-    <div class="flex space-x-4">
-        <a href="{{ url_for('admin_panel') }}" class="bg-gray-500 text-white px-8 py-4 rounded hover:bg-gray-600">← Back</a>
-    </div>
+        <div class="flex space-x-4">
+            {% if source == 'admin_panel' %}
+              <a href="{{ url_for('admin_panel') }}" class="bg-gray-500 text-white px-8 py-4 rounded hover:bg-gray-600">← Back</a>
+            {% else %}
+              <a href="{{ url_for('poultry_stock') }}" class="bg-gray-500 text-white px-8 py-4 rounded hover:bg-gray-600">← Back</a>
+            {% endif %}
+        </div>
+          
     
 </html>
